k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cbt-service
spec:
  selector:
    app: cbt-saas
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
